# gash

./: CMakeLists.txt  lexer.cpp  main.cpp  token.cpp
ast/: tree_node.cpp  tree_node.h  visitor.cpp  visitor.h
interpreter/: execute_program.cpp  interpreter.h  run_bool_operations.cpp  run_command.cpp  run_group_command.cpp  run_pipeline.cpp
lexer/: lexer.cpp  lexer.h  token.h
parser/: parser.cpp  parser.h
